--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ES Admin</title>
-    <link rel="stylesheet" href="./style.css">
+    <base href="/">
+    <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
     <div id="root"></div>
